--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,10 @@ ignore =
   WPS305,  # Allow f-strings
   WPS115,  # Allow UPPERCASE attr names
   DAR201,
+  DAR101,
   D106,
+  D401
+
 per-file-ignores=
   */tests/*.py:
     S101,
@@ -23,8 +26,7 @@ include_trailing_comma = true
 multi_line_output = 3
 skip = migrations
 default_section = FIRSTPARTY
-known_django = django
-known_drf = rest_framework
+known_aiogram = aiogram
 
 # Should be: 120 - 1
 line_length = 119
@@ -33,14 +35,4 @@ known_third_party =
   redis,
   stories,
 
-sections = FUTURE,STDLIB,THIRDPARTY,DJANGO,DRF,FIRSTPARTY,LOCALFOLDER
-
-[tool:pytest]
-DJANGO_SETTINGS_MODULE = "app.settings"
-
-[mypy]
-plugins =
-    mypy_django_plugin.main
-
-[mypy.plugins.django-stubs]
-DJANGO_SETTINGS_MODULE = "app.settings"
+sections = FUTURE,STDLIB,THIRDPARTY,AIOGRAM,FIRSTPARTY,LOCALFOLDER
